[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-sim"
version = "0.1.0"
description = "MPL simulation XML and mesh assets for MyoSuite."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "myolab" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/myolab/MPL_sim"
Repository = "https://github.com/myolab/MPL_sim"

[tool.setuptools]
packages = ["mpl_sim"]
include-package-data = true

[tool.setuptools.package-dir]
mpl_sim = "."

[tool.setuptools.package-data]
mpl_sim = ["**/*"]
